fix: update iframe alignment

--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -1,13 +1,13 @@
 #frame {
     width: 100%;
-    text-align: center;
+    overflow: hidden;
 }
 
 #frame iframe {
     height: 521px;
     width: 500px;
-    -moz-transform-origin: top center;
-    -o-transform-origin: top center;
-    -webkit-transform-origin: top center;
+    -moz-transform-origin: 0 0;
+    -o-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
     background-color: white;
 }
